--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ networks:
   cups-vlan:
     driver: macvlan
     driver_opts:
-      parent: eth0 # Update as necessary
+      parent: ovs_eth0 # Update as necessary
     ipam:
       config:
         - subnet: "192.168.1.0/24"
