--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build: .
     restart: unless-stopped
     environment:
-      PRINTER_ID: Paperless_Printer3 # ID (No spaces)
-      PRINTER_NAME: Paperless Printer3 # Name of printer
+      PRINTER_ID: Paperless_Printer # ID (No spaces)
+      PRINTER_NAME: Paperless Printer # Name of printer
       HOSTNAME: '192.168.123.252:631' # Use static IP (below) or hostname if you have one
       OUTPUT_SUBPATH: 'vprint' # Subpath in /mnt/output/
     networks:
